# stable-diffusion-cpp-python

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: build-and-release.yaml  build_and_publish.yml  publish-to-test.yaml  publish.yaml  release.yaml
docs/: hipBLAS_on_Windows.md
stable_diffusion_cpp/: __init__.py  _internals.py  _logger.py  stable_diffusion.py  stable_diffusion_cpp.py  stable_diffusion_types.py
tests/: conftest.py  test.py  test_chroma.py  test_controlnet.py  test_convert_model.py  test_edit.py  test_flex2.py  test_flux.py  test_flux2.py  test_img2img.py  test_img2vid.py  test_inpainting.py  test_klein.py  test_list_maps.py  test_memory_leak.py  test_multi_gpu.py  test_ovis.py  test_photomaker.py  test_photomaker_2.py  test_preprocess_canny.py  test_qwen_image.py  test_qwen_image_edit.py  test_sd3.py  test_system_info.py  test_txt2img.py  test_upscale.py  test_vae_memory_leak.py  test_vid.py  test_vid_vace.py  test_vulkan.py  test_z_image.py  tests.md  unload_model.py
